sumo/tests/od2trips/errors/default_false_departpos/options.od2trips
-n input_net.net.xml -d input_od_o.fma -o trips.trips.xml --departpos xxx
